SSL support, rename props file
- Added SSL support to server
- Made main method not exit
- Renamed fusion_index.properties -> index_server.properties
- Added new properties to the config to support SSL